--- a/index/templates/index/seat.html
+++ b/index/templates/index/seat.html
@@ -12,8 +12,7 @@
     <main class="mb-5">
         <script type="text/javascript">
             {#alert("你也有预约，请取消预约后重新预约！");#}
-
-            {{ msg }}("你也有预约，请取消预约后重新预约！");
+            {{ msg }}("你有预约，请取消预约后重新预约！");
         </script>
         <div class="container px-4 py-3" id="custom-cards">
             <h3 class="pb-2 m-1">请选择自习室、座位和时间</h3>
