--- a/index/templates/index/seat.html
+++ b/index/templates/index/seat.html
@@ -45,9 +45,10 @@
                         <option value="3" {% if time_selected_s == 2 %} selected {% endif %}>晚自习</option>
                     </select>
                 </div>
+
                 <div class="col-md-3">
                     <label for="inputZip" class="form-label">搜索</label>
-                    <button id="inputZip" type="submit" class="form-control btn btn-primary">
+                    <button id="inputZip" type="submit" class="form-control btn btn-outline-primary">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
