--- a/index/templates/index/seat_id.html
+++ b/index/templates/index/seat_id.html
@@ -34,17 +34,23 @@
                     {% endif %}
                     )</h5>
                 {% csrf_token %}
-                {% for i in seat %}
+                <div class="col-12">
+                    <div class="row">
+                        {% for i in seat %}
 
+                            <div class="col-1">
+                                <input value="{{ i }}" type="radio" class="btn-check" name="number"
+                                       id="success-outlined-{{ i }}"
+                                       autocomplete="off">
+                                <label class="btn btn-outline-success m-1 w-100 h-85"
+                                       for="success-outlined-{{ i }}">{{ i }}</label>
+                            </div>
 
-                    <input value="{{ i }}" type="radio" class="btn-check" name="number" id="success-outlined-{{ i }}"
-                           autocomplete="off">
-                    <label class="btn btn-outline-success m-1 col-1" for="success-outlined-{{ i }}">{{ i }}</label>
-
-
-                {% endfor %}
+                        {% endfor %}
+                    </div>
+                </div>
                 <div class="text-end mt-3 ">
-                    <input class="btn btn-primary w-25 m-auto" type="submit" value="提交">
+                    <input class="btn-lg btn-primary w-25 m-auto" type="submit" value="确定预约">
                 </div>
             </div>
         </form>
